--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "cobe": "^0.6.5",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "radix-ui": "^1.4.3",
-    "react": "^19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
